src/test/deca/syntax/invalid/created/bloc_alone/method_alone.deca
// Description:
//      Bloc class sans identifier
// Resultats:
//      Error syntaxe Ligne 6 : no viable alternative at input 'int'

int getX(){

}